--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,28 @@ header{
     grid-area: header;
 }
 
-nav{
+nav{     
+    align-items: center;
+    background-color: rgb(22, 22, 22);
     grid-area: nav;
+    font-family: 'Permanent Marker', cursive;
+    display: flex;
+    justify-content: space-around;
+ 
+}
+
+nav a{
+    color: white;
+    text-decoration: none;
+}
+
+nav img {   
+    height: 6vh;
+}
+
+nav a:hover{
+    font-size: 20px;
+    color: red;
 }
 
 section{
