--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,14 @@ body{
                          'header header header aside'
                          'section section section aside'
                          'footer footer footer footer';
-grid-template-columns: 25vw 25vw 25vw 25vw;
+grid-template-columns: 25.2vw 24.5vw 24.5vw 24.5vw;
 grid-template-rows: 8vh 100vh 50vh 8vh;
 margin: 0;
+}
+
+body::-webkit-scrollbar{
+    width: 0px;
+    background: transparent: 
 }
 
 aside{
@@ -31,7 +36,11 @@ nav{
     grid-area: nav;
     font-family: 'Permanent Marker', cursive;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-around; 
+    position: fixed;
+    right: 0;
+    width: 100vw;
+    
  
 }
 
@@ -61,3 +70,12 @@ section{
     grid-area: section;
 }
 
+aside h2{
+    color: rgb(150, 2, 2);
+    display: flex;
+    justify-content: center;
+}
+
+aside p{
+    padding: 0px 15px;
+}
